Corrected border color issue on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,6 @@ li {
 
   li {
     height: auto !important;
-    border: 1px solid #ededed;
     width: 100%;
     padding: 10px;
     margin-bottom: -1px;
